fix: fix asc list wrap

--- a/app/scss/style.scss
+++ b/app/scss/style.scss
@@ -1004,6 +1004,7 @@ header {
 
         .asc-list {
             flex-wrap: wrap;
+            max-width: 1500px;
         }
     }
 
